# WarehouseAPI

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 11e419100634_create_products_table.py
tests/: test_api.py
warehouse/: api.py  database.py  main.py  methods.py  models.py  schemas.py
