[tool.poetry]
name = "warehouseapi"
version = "0.1.0"
description = ""
authors = ["Alexsandr250897 <132817845+Alexsandr250897@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic = "^2.9.2"
redis = "^5.0.8"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
